<resources>
    <string name="app_name">Guess the Number</string>
    <string name="welcome_to_guess_the_number_android_edition">Welcome to Guess the Number (Android Edition)!</string>
    <string name="author">Created by Mithun</string>
    <string name="start_btn">Start!</string>
    <string name="hint_main">Type a number</string>
    <string name="gtn">Guess the Number!</string>
    <string name="check">Check!</string>
    <string name="re_generate_the_number">Re-generate the number</string>
    <string name="v1">Version 4.0! FULL SIGN UP / LOGIN SYSTEM</string>
    <string name="past_version_information">Past Version Information</string>
    <string name="gb">Go back…</string>
    <string name="help">Help</string>
    <string name="go_back_to_menu_screen">Go back to Menu Screen.</string>
    <string name="english_or_spanish">Loading... please wait.</string>
    <string name="welcome_to_guess_the_number_n_also_known_as_gtn_or_guess_the_number_android_edition">Welcome to Guess the Number! \n (Also known as GTN or Guess the Number (Android Edition)</string>
    <string name="guess_the_number">Guess the Number</string>
    <string name="or">Or</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="gtn_logo">Guess the number logo</string>
    <string name="web_client_id">508018665798-od75rohrgnmbjeubn098d93gl0n59fru.apps.googleusercontent.com</string>
    <string name="sign_in_google_button">Sign In Google Button</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up_or_login">Sign up or Login</string>
</resources>